[project]
name = "cubinho"
version = "0.1.1"
description = "Assistente de engenharia de software"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "agno>=2.3.8",
    "ddgs>=9.9.3",
    "discord-py>=2.6.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.53.0",
    "sqlalchemy>=2.0.44",
]
